--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Contact DATASANJ for Power BI dashboards, Excel automation, and data analytics services. Free consultation available.">
     <meta name="keywords" content="contact data analyst, hire Power BI consultant, data analytics consultation">
     <title>Contact - Get Your Free Consultation | DATASANJ</title>
-    <link rel="canonical" href="https://datasanj.com/contact.html">
+    <link rel="canonical" href="https://datasanj.com/Contact.html">
     
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -98,9 +98,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html" class="active cta-btn">Contact</a></li>
+                <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Contact.html" class="active cta-btn">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -121,7 +121,7 @@
                     <div class="contact-methods">
                         <div class="contact-method">
                             <h3>Email</h3>
-                            <a href="/cdn-cgi/l/email-protection#73101c1d07121007331712071200121d195d101c1e"><span class="__cf_email__" data-cfemail="ed8e8283998c8e99ad898c998c9e8c8387c38e8280">d_zohal@datasanj.com</span></a>
+                            <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                             <p>Response within 24 hours</p>
                         </div>
                         <div class="contact-method">
@@ -137,7 +137,11 @@
                 </div>
                 <div class="contact-form">
                     <h2>Send a Message</h2>
-                    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                    <form action="https://api.web3forms.com/submit" method="POST">
+                        <input type="hidden" name="access_key" value="95adfa3f-1006-4078-b16d-94180cd5a505">
+                        <input type="hidden" name="subject" value="New Contact Form Submission from DATASANJ">
+                        <input type="hidden" name="redirect" value="https://zohal987654321.github.io/Datasanj/Contact.html?success=true">
+                        
                         <div class="form-group">
                             <label for="name">Your Name *</label>
                             <input type="text" id="name" name="name" required>
@@ -177,18 +181,27 @@
                 <div class="footer-brand">
                     <h3>DATASANJ</h3>
                     <p>Professional data analytics, Power BI consulting, and Excel automation services in Canberra, Australia.</p>
-                    <p style="margin-top: 20px;">Canberra, ACT, Australia<br><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="44272b2a30252730042025302537252a2e6a272b29">[email&#160;protected]</a></p>
+                    <p style="margin-top: 20px;">Canberra, ACT, Australia<br>d_zohal@datasanj.com</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
                     <a href="index.html">Home</a>
                     <a href="services.html">Services</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="about.html">About</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="Portfolio.html">Portfolio</a>
+                    <a href="About.html">About</a>
+                    <a href="Contact.html">Contact</a>
                 </div>
                 <div class="footer-links">
                     <h4>Connect</h4>
                     <a href="https://www.linkedin.com/in/zohal-zahir" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/zohalzahir" target="_blank">GitHub</a>
-                    <a href="https://www.upwork.com/freelan
+                    <a href="https://github.com/Zohal987654321" target="_blank">GitHub</a>
+                    <a href="https://www.upwork.com/freelancers/zohalz" target="_blank">Upwork</a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                2025 DATASANJ | Zohal Zahir | All Rights Reserved
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
