--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html" class="cta-btn">Contact</a></li>
+                <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Contact.html" class="cta-btn">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -147,14 +147,14 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-image">
-            <img src="images/Stop_Guessing__Start_Growing__version_1.png" alt="Stop Guessing Start Growing">
+            <img src="Stop_Guessing__Start_Growing__version_1.png" alt="Stop Guessing Start Growing">
         </div>
         <div class="hero-text">
             <h1>Professional Data Analytics<br>for Business Growth</h1>
             <p>Power BI dashboards, Excel automation, and data solutions that save time, eliminate errors, and drive better business decisions.</p>
             <div class="hero-buttons">
-                <a href="contact.html" class="btn btn-primary">Get Started</a>
-                <a href="portfolio.html" class="btn btn-secondary">View Portfolio</a>
+                <a href="Contact.html" class="btn btn-primary">Get Started</a>
+                <a href="Portfolio.html" class="btn btn-secondary">View Portfolio</a>
             </div>
             <div class="stats">
                 <div class="stat">
@@ -183,7 +183,7 @@
                     <p>Our advanced analytics solutions turn your raw data into actionable insights that drive immediate results. Save thousands annually with intelligent automation and real-time business intelligence.</p>
                 </div>
                 <div class="showcase-image">
-                    <img src="images/Data_Into_Decisions__Fast_version_1.png" alt="Data Analytics Dashboard">
+                    <img src="Data_Into_Decisions,_Fast_version_1.png" alt="Data Analytics Dashboard">
                 </div>
             </div>
             <div class="showcase-grid" style="direction: rtl;">
@@ -192,7 +192,7 @@
                     <p>Complex data modeling made simple. We transform your scattered data into comprehensive, fact-based reports that drive improved results and strategic decision-making.</p>
                 </div>
                 <div class="showcase-image">
-                    <img src="images/We_Model_Clarity_version_1.png" alt="Data Modeling Services">
+                    <img src="We_Model_Clarity_version_1.png" alt="Data Modeling Services">
                 </div>
             </div>
             <div class="showcase-grid">
@@ -201,7 +201,7 @@
                     <p>Are you listening? Raw metrics often hide the clear path to profit. Our operational demand analysis and forecasting tools reveal the insights you've been missing.</p>
                 </div>
                 <div class="showcase-image">
-                    <img src="images/Your_Data_Is_Talking__version_1.png" alt="Business Intelligence Dashboard">
+                    <img src="Your_Data_Is_Talking__version_1.png" alt="Business Intelligence Dashboard">
                 </div>
             </div>
         </div>
@@ -236,7 +236,7 @@
         <div class="container">
             <h2>Ready to Transform Your Data?</h2>
             <p>Schedule a free consultation to discuss your project requirements.</p>
-            <a href="contact.html" class="btn btn-primary">Get In Touch</a>
+            <a href="Contact.html" class="btn btn-primary">Get In Touch</a>
         </div>
     </section>
 
@@ -253,9 +253,9 @@
                     <h4>Quick Links</h4>
                     <a href="index.html">Home</a>
                     <a href="services.html">Services</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="about.html">About</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="Portfolio.html">Portfolio</a>
+                    <a href="About.html">About</a>
+                    <a href="Contact.html">Contact</a>
                 </div>
                 <div class="footer-links">
                     <h4>Connect</h4>
