--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,7 +6,7 @@
     <meta name="description" content="View DATASANJ portfolio of Power BI dashboards, Excel automation tools, and data analytics projects with measurable business results.">
     <meta name="keywords" content="Power BI portfolio, dashboard examples, Excel automation projects">
     <title>Portfolio - Data Analytics Projects | DATASANJ</title>
-    <link rel="canonical" href="https://datasanj.com/portfolio.html">
+    <link rel="canonical" href="https://datasanj.com/Portfolio.html">
     
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -90,9 +90,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="portfolio.html" class="active">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html" class="cta-btn">Contact</a></li>
+                <li><a href="Portfolio.html" class="active">Portfolio</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Contact.html" class="cta-btn">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -157,7 +157,7 @@
         <div class="container">
             <h2>Ready to See Similar Results?</h2>
             <p style="font-size: 20px; margin-bottom: 40px; color: #64748b;">Let's discuss your project requirements.</p>
-            <a href="contact.html" class="btn-primary">Start Your Project</a>
+            <a href="Contact.html" class="btn-primary">Start Your Project</a>
         </div>
     </section>
 
@@ -167,22 +167,27 @@
                 <div class="footer-brand">
                     <h3>DATASANJ</h3>
                     <p>Professional data analytics, Power BI consulting, and Excel automation services in Canberra, Australia.</p>
-                    <p style="margin-top: 20px;">Canberra, ACT, Australia<br><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="086b67667c696b7c486c697c697b696662266b6765">[email&#160;protected]</a></p>
+                    <p style="margin-top: 20px;">Canberra, ACT, Australia<br>d_zohal@datasanj.com</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
                     <a href="index.html">Home</a>
                     <a href="services.html">Services</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="about.html">About</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="Portfolio.html">Portfolio</a>
+                    <a href="About.html">About</a>
+                    <a href="Contact.html">Contact</a>
                 </div>
                 <div class="footer-links">
                     <h4>Connect</h4>
                     <a href="https://www.linkedin.com/in/zohal-zahir" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/zohalizahir" target="_blank">GitHub</a>
+                    <a href="https://github.com/Zohal987654321" target="_blank">GitHub</a>
                     <a href="https://www.upwork.com/freelancers/zohalz" target="_blank">Upwork</a>
                 </div>
             </div>
             <div class="footer-bottom">
-           
+                2025 DATASANJ | Zohal Zahir | All Rights Reserved
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
