--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Meet Zohal Zahir, data analytics consultant with expertise in Power BI, Excel automation, and business intelligence. Top-Rated Professional based in Canberra.">
     <meta name="keywords" content="data analyst Canberra, Power BI consultant, Excel expert, Zohal Zahir">
     <title>About Zohal Zahir - Data Analytics Consultant | DATASANJ</title>
-    <link rel="canonical" href="https://datasanj.com/about.html">
+    <link rel="canonical" href="https://datasanj.com/About.html">
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -115,9 +115,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="contact.html" class="cta-btn">Contact</a></li>
+                <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="About.html" class="active">About</a></li>
+                <li><a href="Contact.html" class="cta-btn">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -135,7 +135,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-avatar">
-                    <img src="Images/Zohal Zahir.jpg" alt="Zohal Zahir">
+                    <img src="Zohal Zahir.jpg" alt="Zohal Zahir">
                 </div>
                 <div class="about-text">
                     <h2>From Medicine to Data Mastery</h2>
@@ -240,7 +240,7 @@
         <div class="container">
             <h2>Let's Work Together</h2>
             <p style="font-size: 20px; margin-bottom: 40px; color: #64748b;">Ready to transform your data processes?</p>
-            <a href="contact.html" class="btn-primary">Get In Touch</a>
+            <a href="Contact.html" class="btn-primary">Get In Touch</a>
         </div>
     </section>
 
@@ -257,9 +257,9 @@
                     <h4>Quick Links</h4>
                     <a href="index.html">Home</a>
                     <a href="services.html">Services</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="about.html">About</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="Portfolio.html">Portfolio</a>
+                    <a href="About.html">About</a>
+                    <a href="Contact.html">Contact</a>
                 </div>
                 <div class="footer-links">
                     <h4>Connect</h4>
@@ -271,6 +271,7 @@
             <div class="footer-bottom">
                 2025 DATASANJ | Zohal Zahir | All Rights Reserved
             </div>
-       
-
-
+        </div>
+    </footer>
+</body>
+</html>
