--- a/services.html
+++ b/services.html
@@ -92,9 +92,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html" class="active">Services</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html" class="cta-btn">Contact</a></li>
+                <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Contact.html" class="cta-btn">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -210,4 +210,5 @@
                 </div>
             </div>
             <div class="footer-bottom">
+
            
