--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
             <div class="stats">
                 <div class="stat">
-                    <h3>60+</h3>
+                    <h3>70+</h3>
                     <p>Projects Delivered</p>
                 </div>
                 <div class="stat">
@@ -247,7 +247,7 @@
                 <div class="footer-brand">
                     <h3>DATASANJ</h3>
                     <p>Professional data analytics, Power BI consulting, and Excel automation services in Canberra, Australia.</p>
-                    <p style="margin-top: 20px;">Canberra, ACT, Australia<br>contact@datasanj.com</p>
+                    <p style="margin-top: 20px;">Canberra, ACT, Australia<br>d_zohal@datasanj.com</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
