--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
                 </div>
                 <div class="footer-links">
                     <h4>Connect</h4>
-                    <a href="https://www.linkedin.com/in/zohal-zahir" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/zohalizahir" target="_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/zohal-zahir-46128697/" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/Zohal987654321" target="_blank">GitHub</a>
                     <a href="https://www.upwork.com/freelancers/zohalz" target="_blank">Upwork</a>
                 </div>
             </div>
