--- a/About.html
+++ b/About.html
@@ -138,7 +138,6 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="Portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Contact.html" class="cta-btn">Contact</a></li>
             </ul>
@@ -152,7 +151,7 @@
         </div>
         <div class="hero-text">
             <h1>Professional Data Analytics<br>for Business Growth</h1>
-            <p>I build Power BI dashboards, Excel automation, and data solutions that save you time, eliminate errors, and drive better business decisions.</p>
+            <p>Power BI dashboards, Excel automation, and data solutions that save time, eliminate errors, and drive better business decisions.</p>
             <div class="hero-buttons">
                 <a href="Contact.html" class="btn btn-primary">Get Started</a>
                 <a href="Portfolio.html" class="btn btn-secondary">View Portfolio</a>
@@ -181,7 +180,7 @@
             <div class="showcase-grid">
                 <div class="showcase-content">
                     <h3>Transform Data Into Decisions</h3>
-                    <p>I build advanced analytics solutions that turn your raw data into actionable insights. My automation systems save thousands annually while delivering real-time business intelligence you can trust.</p>
+                    <p>Our advanced analytics solutions turn your raw data into actionable insights that drive immediate results. Save thousands annually with intelligent automation and real-time business intelligence.</p>
                 </div>
                 <div class="showcase-image">
                     <img src="Data_Into_Decisions,_Fast_version_1.png" alt="Data Analytics Dashboard">
@@ -189,8 +188,8 @@
             </div>
             <div class="showcase-grid" style="direction: rtl;">
                 <div class="showcase-content" style="direction: ltr;">
-                    <h3>I Model Clarity</h3>
-                    <p>Complex data modeling made simple. I transform your scattered data into comprehensive, fact-based reports that drive improved results and strategic decision-making.</p>
+                    <h3>We Model Clarity</h3>
+                    <p>Complex data modeling made simple. We transform your scattered data into comprehensive, fact-based reports that drive improved results and strategic decision-making.</p>
                 </div>
                 <div class="showcase-image">
                     <img src="We_Model_Clarity_version_1.png" alt="Data Modeling Services">
@@ -199,7 +198,7 @@
             <div class="showcase-grid">
                 <div class="showcase-content">
                     <h3>Your Data Is Talking</h3>
-                    <p>Are you listening? Raw metrics often hide the clear path to profit. My operational demand analysis and forecasting tools reveal the insights you've been missing.</p>
+                    <p>Are you listening? Raw metrics often hide the clear path to profit. Our operational demand analysis and forecasting tools reveal the insights you've been missing.</p>
                 </div>
                 <div class="showcase-image">
                     <img src="Your_Data_Is_Talking__version_1.png" alt="Business Intelligence Dashboard">
@@ -255,7 +254,6 @@
                     <a href="index.html">Home</a>
                     <a href="services.html">Services</a>
                     <a href="Portfolio.html">Portfolio</a>
-                    <a href="blog.html">Blog</a>
                     <a href="About.html">About</a>
                     <a href="Contact.html">Contact</a>
                 </div>
