--- a/About.html
+++ b/About.html
@@ -139,6 +139,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="About.html" class="active">About</a></li>
                 <li><a href="Contact.html" class="cta-btn">Contact</a></li>
             </ul>
@@ -358,6 +359,7 @@
                     <a href="index.html">Home</a>
                     <a href="services.html">Services</a>
                     <a href="Portfolio.html">Portfolio</a>
+                    <a href="blog.html">Blog</a>
                     <a href="About.html">About</a>
                     <a href="Contact.html">Contact</a>
                 </div>
