--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <a href="index.html">Home</a>
                     <a href="services.html">Services</a>
                     <a href="Portfolio.html">Portfolio</a>
-                    <a href="blog.html">Blog</a>
+                    <a href="Blog.html">Blog</a>
                     <a href="About.html">About</a>
                     <a href="Contact.html">Contact</a>
                 </div>
