--- a/Contact.html
+++ b/Contact.html
@@ -188,6 +188,7 @@
                     <a href="index.html">Home</a>
                     <a href="services.html">Services</a>
                     <a href="Portfolio.html">Portfolio</a>
+                    <a href="Blog.html">Blog</a>
                     <a href="About.html">About</a>
                     <a href="Contact.html">Contact</a>
                 </div>
@@ -205,3 +206,4 @@
     </footer>
 </body>
 </html>
+
