--- a/Portfolio.html
+++ b/Portfolio.html
@@ -174,6 +174,7 @@
                     <a href="index.html">Home</a>
                     <a href="services.html">Services</a>
                     <a href="Portfolio.html">Portfolio</a>
+                    <a href="Blog.html">Blog</a>
                     <a href="About.html">About</a>
                     <a href="Contact.html">Contact</a>
                 </div>
@@ -191,3 +192,4 @@
     </footer>
 </body>
 </html>
+
