--- a/services.html
+++ b/services.html
@@ -198,9 +198,10 @@
                     <h4>Quick Links</h4>
                     <a href="index.html">Home</a>
                     <a href="services.html">Services</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a href="about.html">About</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="Portfolio.html">Portfolio</a>
+                    <a href="About.html">About</a>
+                    <a href="Blog.html">Blog</a>
+                    <a href="Contact.html">Contact</a>
                 </div>
                 <div class="footer-links">
                     <h4>Connect</h4>
@@ -212,3 +213,4 @@
             <div class="footer-bottom">
 
            
+
