--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="Portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="Blog.html">Blog</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Contact.html" class="cta-btn">Contact</a></li>
             </ul>
