--- a/Blog.html
+++ b/Blog.html
@@ -130,7 +130,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="Portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html" class="active">Blog</a></li>
+                <li><a href="Blog.html" class="active">Blog</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Contact.html" class="cta-btn">Contact</a></li>
             </ul>
