--- a/Contact.html
+++ b/Contact.html
@@ -99,6 +99,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="Blog.html">Blog</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Contact.html" class="active cta-btn">Contact</a></li>
             </ul>
@@ -206,4 +207,5 @@
     </footer>
 </body>
 </html>
+
 
