--- a/Portfolio.html
+++ b/Portfolio.html
@@ -91,6 +91,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="Portfolio.html" class="active">Portfolio</a></li>
+                <li><a href="Blog.html">Blog</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Contact.html" class="cta-btn">Contact</a></li>
             </ul>
@@ -192,4 +193,5 @@
     </footer>
 </body>
 </html>
+
 
