--- a/services.html
+++ b/services.html
@@ -93,6 +93,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html" class="active">Services</a></li>
                 <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="Blog.html">Blog</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Contact.html" class="cta-btn">Contact</a></li>
             </ul>
@@ -213,4 +214,5 @@
             <div class="footer-bottom">
 
            
+
 
