--- a/About.html
+++ b/About.html
@@ -157,12 +157,6 @@
             border-radius: 20px;
             overflow: hidden;
             box-shadow: 0 20px 60px rgba(0,0,0,0.15);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 120px;
-            font-weight: 800;
-            color: var(--slate-400);
         }
 
         .hero-image img {
@@ -663,8 +657,7 @@
         <div class="container">
             <div class="hero-image-wrapper">
                 <div class="hero-image">
-                    <!-- Replace with: <img src="your-photo.jpg" alt="Zohal Zahir"> -->
-                    ZZ
+                    <img src="Zohal Zahir.jpg" alt="Zohal Zahir - Data Analytics Consultant">
                 </div>
             </div>
             <div class="hero-content">
@@ -891,7 +884,7 @@
                     <h3>DATASANJ</h3>
                     <p>Professional data analytics consulting by Zohal Zahir. Based in Canberra, serving businesses locally and internationally.</p>
                     <div class="footer-contact">
-                        <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
+                        <a href="/cdn-cgi/l/email-protection#f195ae8b9e99909db19590859082909f9bdf929e9c"><span class="__cf_email__" data-cfemail="f195ae8b9e99909db19590859082909f9bdf929e9c">[email&#160;protected]</span></a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
@@ -922,12 +915,4 @@
                 </div>
             </div>
 
-            <div class="footer-bottom">
-                © 2025 DATASANJ | Zohal Zahir | All Rights Reserved
-            </div>
-        </div>
-    </footer>
-</body>
-</html>
-
-
+            <div class="footer-botto
