--- a/About.html
+++ b/About.html
@@ -63,33 +63,38 @@
         .logo-wrapper {
             display: flex;
             align-items: center;
-            gap: 16px;
+            gap: 14px;
+            text-decoration: none;
         }
 
         .logo-icon {
-            height: 48px;
-            width: auto;
+            width: 36px;
+            height: 36px;
+            flex-shrink: 0;
         }
 
         .logo-text {
             display: flex;
             flex-direction: column;
-            line-height: 1.2;
+            line-height: 1.1;
         }
 
         .logo-text .brand {
-            font-size: 24px;
-            font-weight: 800;
-            color: var(--navy);
-            letter-spacing: -0.5px;
+            font-family: "Inter", "IBM Plex Sans", system-ui, sans-serif;
+            font-size: 20px;
+            font-weight: 600;
+            letter-spacing: 0.08em;
+            color: #2B2B2B;
         }
 
         .logo-text .tagline {
-            font-size: 10px;
+            font-family: "Inter", "IBM Plex Sans", system-ui, sans-serif;
+            font-size: 11px;
             font-weight: 400;
-            color: var(--slate-500);
-            letter-spacing: 1.5px;
+            letter-spacing: 0.22em;
             text-transform: uppercase;
+            color: #6B6B6B;
+            margin-top: 2px;
         }
         
         nav ul { 
@@ -616,63 +621,26 @@
     <nav>
         <div class="container">
             <a href="index.html" class="logo-wrapper">
-  <!-- Icon -->
-  <svg class="logo-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80">
-    <g transform="translate(20,18)">
-      <rect x="0"  y="36" width="9" height="26" rx="2" fill="#2B2B2B"/>
-      <rect x="19" y="24" width="9" height="38" rx="2" fill="#2B2B2B"/>
-      <rect x="38" y="12" width="9" height="50" rx="2" fill="#2B2B2B"/>
-      <path d="M 1 50 Q 26 30, 47 15"
-            stroke="#C46A3D"
-            stroke-width="2"
-            fill="none"
-            stroke-linecap="round"/>
-    </g>
-  </svg>
+                <!-- Icon -->
+                <svg class="logo-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80">
+                    <g transform="translate(20,18)">
+                        <rect x="0"  y="36" width="9" height="26" rx="2" fill="#2B2B2B"/>
+                        <rect x="19" y="24" width="9" height="38" rx="2" fill="#2B2B2B"/>
+                        <rect x="38" y="12" width="9" height="50" rx="2" fill="#2B2B2B"/>
+                        <path d="M 1 50 Q 26 30, 47 15"
+                              stroke="#C46A3D"
+                              stroke-width="2"
+                              fill="none"
+                              stroke-linecap="round"/>
+                    </g>
+                </svg>
 
-  <!-- Text -->
-  <div class="logo-text">
-    <span class="brand">DATASANJ</span>
-    <span class="tagline">DATA ANALYTICS &amp; AUTOMATION</span>
-  </div>
-</a>
-.logo-wrapper {
-  display: flex;
-  align-items: center;
-  gap: 14px; /* intentional breathing room */
-  text-decoration: none;
-}
-
-.logo-icon {
-  width: 36px;
-  height: 36px;
-  flex-shrink: 0;
-}
-
-.logo-text {
-  display: flex;
-  flex-direction: column;
-  line-height: 1.1;
-}
-
-.brand {
-  font-family: "Inter", "IBM Plex Sans", system-ui, sans-serif;
-  font-size: 20px;
-  font-weight: 600;
-  letter-spacing: 0.08em;
-  color: #2B2B2B;
-}
-
-.tagline {
-  font-family: "Inter", "IBM Plex Sans", system-ui, sans-serif;
-  font-size: 11px;
-  font-weight: 400;
-  letter-spacing: 0.22em;
-  text-transform: uppercase;
-  color: #6B6B6B;
-  margin-top: 2px;
-}
-
+                <!-- Text -->
+                <div class="logo-text">
+                    <span class="brand">DATASANJ</span>
+                    <span class="tagline">DATA ANALYTICS &amp; AUTOMATION</span>
+                </div>
+            </a>
 
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -917,7 +885,7 @@
                     <h3>DATASANJ</h3>
                     <p>Professional data analytics consulting by Zohal Zahir. Based in Canberra, serving businesses locally and internationally.</p>
                     <div class="footer-contact">
-                        <a href="/cdn-cgi/l/email-protection#f195ae8b9e99909db19590859082909f9bdf929e9c"><span class="__cf_email__" data-cfemail="f195ae8b9e99909db19590859082909f9bdf929e9c">[email&#160;protected]</span></a>
+                        <a href="mailto:zohal@datasanj.com">zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
@@ -948,6 +916,12 @@
                 </div>
             </div>
 
-            <div class="footer-botto
+            <div class="footer-bottom">
+                <p>&copy; 2024 DATASANJ. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
 
 
