--- a/About.html
+++ b/About.html
@@ -885,7 +885,7 @@
                     <h3>DATASANJ</h3>
                     <p>Professional data analytics consulting by Zohal Zahir. Based in Canberra, serving businesses locally and internationally.</p>
                     <div class="footer-contact">
-                        <a href="mailto:zohal@datasanj.com">zohal@datasanj.com</a>
+                        <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
@@ -923,3 +923,4 @@
     </footer>
 </body>
 </html>
+
