--- a/About.html
+++ b/About.html
@@ -763,7 +763,7 @@
                 </p>
 
                 <p>
-                    That frustration led me to the <strong>University of Adelaide</strong>, where I completed my Master's in Data Science. I learned Python, R, statistical modeling, and machine learning. But more importantly, I learned how to build systems that work reliably in the real world—not just in notebooks or demos.
+                    That frustration led me to the <strong>University of Adelaide</strong>, where I got a Postgraduate certification in Data Science. I learned Python, R, statistical modeling, and machine learning. But more importantly, I learned how to build systems that work reliably in the real world—not just in notebooks or demos.
                 </p>
 
                 <div class="highlight-box">
@@ -987,3 +987,4 @@
     </footer>
 </body>
 </html>
+
