--- a/About.html
+++ b/About.html
@@ -772,7 +772,7 @@
                 </p>
 
                 <p>
-                    I've also built plenty of "boring" but essential business tools: <strong>payroll systems, pricing calculators, inventory trackers, budget forecasts</strong>. The stuff that actually keeps businesses running but nobody talks about on LinkedIn because it's not sexy. I take pride in solving those problems too.
+                    I've also built plenty of "boring" but essential business tools: <strong>payroll systems, pricing calculators, inventory trackers, budget forecasts</strong>. The stuff that actually keeps businesses running. I take pride in solving those problems too.
                 </p>
 
                 <h3>How I Actually Work</h3>
@@ -959,3 +959,4 @@
     </footer>
 </body>
 </html>
+
