--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
             display: inline-flex;
             align-items: center;
             gap: 10px;
-            background: var(--charcoal);
-            color: var(--copper-light);
+            background: var(--copper);
+            color: var(--warm-white);
             padding: 10px 20px;
             border-radius: 4px;
             font-size: 12px;
@@ -888,7 +888,7 @@
                     <h3>DATASANJ</h3>
                     <p>Microsoft Certified Power BI consultant by Zohal Zahir. Based in Canberra, delivering results globally.</p>
                     <div class="footer-contact">
-                        <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
+                        <a href="/cdn-cgi/l/email-protection#c7a398bda8afa6ab87a3a6b3a6b4a6a9ade9a4a8aa"><span class="__cf_email__" data-cfemail="f094af8a9f98919cb09491849183919e9ade939f9d">[email&#160;protected]</span></a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
@@ -920,9 +920,4 @@
             </div>
 
             <div class="footer-bottom">
-                © 2025 DATASANJ | Zohal Zahir | Microsoft Certified Power BI Data Analyst
-            </div>
-        </div>
-    </footer>
-</body>
-</html>
+                ©
