--- a/About.html
+++ b/About.html
@@ -229,9 +229,10 @@
         }
 
         .badge.featured {
-            background: var(--charcoal);
-            color: var(--copper-light);
-            border-color: var(--charcoal);
+            background: var(--copper);
+            color: var(--warm-white);
+            border-color: var(--copper);
+            font-weight: 600;
         }
 
         /* Section Styling */
@@ -772,7 +773,7 @@
                 </p>
 
                 <p>
-                    I've also built plenty of "boring" but essential business tools: <strong>payroll systems, pricing calculators, inventory trackers, budget forecasts</strong>. The stuff that actually keeps businesses running. I take pride in solving those problems too.
+                    I've also built plenty of "boring" but essential business tools: <strong>payroll systems, pricing calculators, inventory trackers, budget forecasts</strong>. The stuff that actually keeps businesses running but nobody talks about on LinkedIn because it's not sexy. I take pride in solving those problems too.
                 </p>
 
                 <h3>How I Actually Work</h3>
@@ -921,7 +922,7 @@
                     <h3>DATASANJ</h3>
                     <p>Microsoft Certified Power BI consultant by Zohal Zahir. Based in Canberra, delivering results globally.</p>
                     <div class="footer-contact">
-                        <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
+                        <a href="/cdn-cgi/l/email-protection#02665d786d6a636e426663766371636c682c616d6f"><span class="__cf_email__" data-cfemail="83e7dcf9ecebe2efc3e7e2f7e2f0e2ede9ade0ecee">[email&#160;protected]</span></a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
@@ -953,10 +954,4 @@
             </div>
 
             <div class="footer-bottom">
-                © 2025 DATASANJ | Zohal Zahir | Microsoft Certified Power BI Data Analyst
-            </div>
-        </div>
-    </footer>
-</body>
-</html>
-
+                ©
