--- a/index.html
+++ b/index.html
@@ -540,7 +540,8 @@
         .cta-section p {
             font-size: 17px;
             margin-bottom: 40px;
-            opacity: 0.8;
+            opacity: 1;
+            color: rgba(255, 255, 255, 0.95);
         }
 
         .cta-section .btn-primary {
@@ -576,7 +577,7 @@
         }
 
         .footer-brand p {
-            color: var(--grey-400);
+            color: rgba(255, 255, 255, 0.85);
             line-height: 1.7;
             font-size: 14px;
             margin-bottom: 24px;
@@ -589,7 +590,7 @@
         }
 
         .footer-contact a {
-            color: var(--grey-400);
+            color: rgba(255, 255, 255, 0.85);
             font-size: 14px;
             transition: color 0.3s ease;
             display: flex;
@@ -620,7 +621,7 @@
 
         .footer-links a {
             display: block;
-            color: var(--grey-400);
+            color: rgba(255, 255, 255, 0.85);
             margin-bottom: 14px;
             font-size: 14px;
             transition: color 0.3s ease;
@@ -634,7 +635,7 @@
             text-align: center;
             padding-top: 40px;
             border-top: 1px solid var(--charcoal-light);
-            color: var(--grey-500);
+            color: rgba(255, 255, 255, 0.5);
             font-size: 13px;
             letter-spacing: 0.02em;
         }
@@ -888,7 +889,7 @@
                     <h3>DATASANJ</h3>
                     <p>Microsoft Certified Power BI consultant by Zohal Zahir. Based in Canberra, delivering results globally.</p>
                     <div class="footer-contact">
-                        <a href="/cdn-cgi/l/email-protection#c7a398bda8afa6ab87a3a6b3a6b4a6a9ade9a4a8aa"><span class="__cf_email__" data-cfemail="f094af8a9f98919cb09491849183919e9ade939f9d">[email&#160;protected]</span></a>
+                        <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
