--- a/About.html
+++ b/About.html
@@ -487,7 +487,8 @@
         .cta-section p {
             font-size: 17px;
             margin-bottom: 40px;
-            opacity: 0.8;
+            opacity: 1;
+            color: rgba(255, 255, 255, 0.95);
         }
 
         .btn {
@@ -539,7 +540,7 @@
         }
 
         .footer-brand p {
-            color: var(--grey-400);
+            color: rgba(255, 255, 255, 0.85);
             line-height: 1.7;
             font-size: 14px;
             margin-bottom: 24px;
@@ -552,7 +553,7 @@
         }
 
         .footer-contact a {
-            color: var(--grey-400);
+            color: rgba(255, 255, 255, 0.85);
             font-size: 14px;
             transition: color 0.3s ease;
             display: flex;
@@ -583,7 +584,7 @@
 
         .footer-links a {
             display: block;
-            color: var(--grey-400);
+            color: rgba(255, 255, 255, 0.85);
             margin-bottom: 14px;
             font-size: 14px;
             transition: color 0.3s ease;
@@ -597,7 +598,7 @@
             text-align: center;
             padding-top: 40px;
             border-top: 1px solid var(--charcoal-light);
-            color: var(--grey-500);
+            color: rgba(255, 255, 255, 0.5);
             font-size: 13px;
             letter-spacing: 0.02em;
         }
@@ -922,7 +923,7 @@
                     <h3>DATASANJ</h3>
                     <p>Microsoft Certified Power BI consultant by Zohal Zahir. Based in Canberra, delivering results globally.</p>
                     <div class="footer-contact">
-                        <a href="/cdn-cgi/l/email-protection#02665d786d6a636e426663766371636c682c616d6f"><span class="__cf_email__" data-cfemail="83e7dcf9ecebe2efc3e7e2f7e2f0e2ede9ade0ecee">[email&#160;protected]</span></a>
+                        <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
