--- a/services.html
+++ b/services.html
@@ -530,7 +530,8 @@
         .cta-section p {
             font-size: 17px;
             margin-bottom: 40px;
-            opacity: 0.8;
+            opacity: 1;
+            color: rgba(255, 255, 255, 0.95);
         }
 
         .cta-section .btn-primary {
@@ -566,7 +567,7 @@
         }
 
         .footer-brand p {
-            color: var(--grey-400);
+            color: rgba(255, 255, 255, 0.85);
             line-height: 1.7;
             font-size: 14px;
             margin-bottom: 24px;
@@ -579,7 +580,7 @@
         }
 
         .footer-contact a {
-            color: var(--grey-400);
+            color: rgba(255, 255, 255, 0.85);
             font-size: 14px;
             transition: color 0.3s ease;
             display: flex;
@@ -610,7 +611,7 @@
 
         .footer-links a {
             display: block;
-            color: var(--grey-400);
+            color: rgba(255, 255, 255, 0.85);
             margin-bottom: 14px;
             font-size: 14px;
             transition: color 0.3s ease;
@@ -624,7 +625,7 @@
             text-align: center;
             padding-top: 40px;
             border-top: 1px solid var(--charcoal-light);
-            color: var(--grey-500);
+            color: rgba(255, 255, 255, 0.5);
             font-size: 13px;
             letter-spacing: 0.02em;
         }
@@ -986,10 +987,4 @@
                 </div>
             </div>
 
-            <div class="footer-bottom">
-                © 2025 DATASANJ | Zohal Zahir | All Rights Reserved
-            </div>
-        </div>
-    </footer>
-</body>
-</html>
+            <div class="footer-botto
