--- a/About.html
+++ b/About.html
@@ -708,7 +708,7 @@
                     <span class="badge">70+ Projects</span>
                     <span class="badge">100% Success Rate</span>
                     <span class="badge">University of Adelaide</span>
-                    <span class="badge">Cert IV Accounting</span>
+                    <span class="badge">Cert III Accounting</span>
                 </div>
             </div>
         </div>
@@ -921,7 +921,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <h3>DATASANJ</h3>
-                    <p>Microsoft Certified Power BI consultant by Zohal Zahir. Based in Canberra, delivering results globally.</p>
+                    <p>Microsoft Certified Power BI consultantancy by  Zohal Zahir. Based in Canberra, delivering results globally.</p>
                     <div class="footer-contact">
                         <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
@@ -956,3 +956,4 @@
 
             <div class="footer-bottom">
                 ©
+
