--- a/Portfolio.html
+++ b/Portfolio.html
@@ -975,7 +975,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <h3>DATASANJ</h3>
-                    <p>Professional data analytics consulting by Zohal Zahir. Based in Canberra, serving businesses locally and internationally.</p>
+                    <p>Professional data analytics consultancy by Zohal Zahir. Based in Canberra, serving businesses locally and internationally.</p>
                     <div class="footer-contact">
                         <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
@@ -1015,3 +1015,4 @@
     </footer>
 </body>
 </html>
+
