--- a/services.html
+++ b/services.html
@@ -954,7 +954,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <h3>DATASANJ</h3>
-                    <p>Professional data analytics consulting by Zohal Zahir. Based in Canberra, serving businesses locally and internationally.</p>
+                    <p>Professional data analytics consultancy by Zohal Zahir. Based in Canberra, serving businesses locally and internationally.</p>
                     <div class="footer-contact">
                         <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
                         <a href="#">Canberra, ACT, Australia</a>
@@ -988,3 +988,4 @@
             </div>
 
             <div class="footer-botto
+
