--- a/Portfolio.html
+++ b/Portfolio.html
@@ -519,7 +519,7 @@
                         </div>
                         <div class="project-result">
                             <strong>Result</strong>
-                            <p>✅ Automated daily data refresh<br>✅ Real-time AR aging analysis<br>✅ Instant cash flow visibility<br>✅ One-click executive summary<br>Manual reporting eliminated completely.</p>
+                            <p>- Automated daily data refresh<br>- Real-time AR aging analysis<br>- Instant cash flow visibility<br>- One-click executive summary<br>Manual reporting eliminated completely.</p>
                         </div>
                         <div class="project-tech">
                             <span class="tech-tag">Microsoft Fabric</span>
@@ -804,3 +804,4 @@
             </div>
 
             <div class="footer-bottom">
+
