--- a/Portfolio.html
+++ b/Portfolio.html
@@ -274,14 +274,15 @@
         }
 
         .project-result {
-            background: var(--copper);
+            background: var(--cream);
             padding: 20px 24px;
             border-radius: 6px;
             margin-bottom: 24px;
+            border: 1px solid var(--stone);
         }
 
         .project-result strong {
-            color: var(--warm-white);
+            color: var(--copper);
             font-size: 13px;
             font-weight: 600;
             display: block;
@@ -291,7 +292,7 @@
         }
 
         .project-result p {
-            color: var(--warm-white);
+            color: var(--charcoal);
             font-size: 15px;
             line-height: 1.6;
         }
@@ -804,4 +805,3 @@
             </div>
 
             <div class="footer-bottom">
-
