--- a/services.html
+++ b/services.html
@@ -606,7 +606,6 @@
                         <li>Multi-source integration</li>
                         <li>Mobile-friendly design</li>
                     </ul>
-                    <div class="service-price">Starting at <strong>$1,500</strong></div>
                 </div>
 
                 <div class="service-card">
@@ -621,7 +620,6 @@
                         <li>Automated workflows</li>
                         <li>Template optimization</li>
                     </ul>
-                    <div class="service-price">Starting at <strong>$1,000</strong></div>
                 </div>
 
                 <div class="service-card">
@@ -636,7 +634,6 @@
                         <li>Real-time financial data</li>
                         <li>Custom financial reports</li>
                     </ul>
-                    <div class="service-price">Starting at <strong>$2,500</strong></div>
                 </div>
 
                 <div class="service-card">
@@ -651,7 +648,6 @@
                         <li>Microsoft Fabric setup</li>
                         <li>Automated data sync</li>
                     </ul>
-                    <div class="service-price">Starting at <strong>$2,000</strong></div>
                 </div>
 
                 <div class="service-card">
@@ -666,7 +662,6 @@
                         <li>Budget vs actuals</li>
                         <li>Runway analysis</li>
                     </ul>
-                    <div class="service-price">Starting at <strong>$1,500</strong></div>
                 </div>
 
                 <div class="service-card">
@@ -681,7 +676,6 @@
                         <li>New feature requests</li>
                         <li>System maintenance</li>
                     </ul>
-                    <div class="service-price">Starting at <strong>$1,200/mo</strong></div>
                 </div>
             </div>
         </div>
@@ -690,54 +684,65 @@
     <!-- Pricing Section -->
     <section class="pricing-section">
         <div class="container">
-            <div class="section-label">Pricing</div>
-            <h2 class="section-title">Simple, Clear Pricing</h2>
-            <p class="section-subtitle">No surprises. Fixed project pricing or monthly retainer.</p>
+            <div class="section-label">Investment Guide</div>
+            <h2 class="section-title">Flexible Pricing for Every Business</h2>
+            <p class="section-subtitle">From simple dashboards to enterprise systems. Projects scoped to your needs and budget. All prices in AUD.</p>
 
             <div class="pricing-grid">
                 <div class="pricing-card">
                     <h3>Quick Start</h3>
-                    <div class="price">$1,500</div>
-                    <div class="price-note">One-time project</div>
+                    <div class="price">$1,500 - $3,000</div>
+                    <div class="price-note">Single deliverable</div>
                     <ul class="pricing-features">
                         <li>Single dashboard or automation</li>
-                        <li>Up to 3 data sources</li>
-                        <li>Basic calculations</li>
-                        <li>2 rounds of revisions</li>
-                        <li>30 days support</li>
+                        <li>Simple data connections</li>
+                        <li>Basic calculations & formatting</li>
+                        <li>Perfect for testing the waters</li>
+                        <li>2 weeks delivery</li>
                     </ul>
                     <a href="Contact.html" class="btn btn-secondary">Get Started</a>
                 </div>
 
                 <div class="pricing-card featured">
-                    <div class="pricing-badge">Most Popular</div>
-                    <h3>Full System</h3>
-                    <div class="price">$4,000</div>
-                    <div class="price-note">One-time project</div>
+                    <div class="pricing-badge">Most Common</div>
+                    <h3>Business System</h3>
+                    <div class="price">$5,000 - $15,000</div>
+                    <div class="price-note">Full solution</div>
                     <ul class="pricing-features">
-                        <li>Complete BI solution</li>
-                        <li>Multiple dashboards</li>
-                        <li>API integrations</li>
-                        <li>Advanced DAX & automation</li>
+                        <li>Complete BI implementation</li>
+                        <li>Multiple dashboards & reports</li>
+                        <li>API integrations (Xero, Salesforce, etc)</li>
+                        <li>Advanced automation & DAX</li>
                         <li>Training & documentation</li>
-                        <li>90 days support</li>
+                        <li>90 days support included</li>
                     </ul>
-                    <a href="Contact.html" class="btn btn-primary">Let's Talk</a>
+                    <a href="Contact.html" class="btn btn-primary">Let's Discuss</a>
                 </div>
 
                 <div class="pricing-card">
-                    <h3>Monthly Partner</h3>
-                    <div class="price">$1,200</div>
-                    <div class="price-note">Per month</div>
+                    <h3>Enterprise / Government</h3>
+                    <div class="price">$15,000 - $25,000+</div>
+                    <div class="price-note">Custom scoped</div>
                     <ul class="pricing-features">
-                        <li>Ongoing updates</li>
-                        <li>Priority support</li>
-                        <li>New features</li>
-                        <li>System maintenance</li>
-                        <li>Monthly strategy call</li>
+                        <li>Multi-department systems</li>
+                        <li>Complex data engineering (Fabric, lakehouse)</li>
+                        <li>Municipal / healthcare scale</li>
+                        <li>Strategic implementation</li>
+                        <li>Extended support & training</li>
+                        <li>Custom contracts & SLAs</li>
                     </ul>
-                    <a href="Contact.html" class="btn btn-secondary">Schedule Call</a>
+                    <a href="Contact.html" class="btn btn-secondary">Discuss Scope</a>
                 </div>
+            </div>
+
+            <div style="text-align: center; margin-top: 60px; padding: 40px; background: var(--warm-white); border-radius: 8px; max-width: 800px; margin-left: auto; margin-right: auto;">
+                <h3 style="font-size: 20px; font-weight: 600; color: var(--charcoal); margin-bottom: 16px;">Monthly Partnership</h3>
+                <p style="font-size: 16px; color: var(--grey-600); margin-bottom: 20px;">Ongoing analytics support, continuous improvement, and priority access. <strong style="color: var(--copper);">$1,500 - $2,500/month AUD</strong> depending on scope and hours.</p>
+                <a href="Contact.html" class="btn btn-primary">Discuss Retainer</a>
+            </div>
+
+            <div style="text-align: center; margin-top: 40px; color: var(--grey-500); font-size: 14px;">
+                <p><strong>Not sure what you need?</strong> Let's talk through your challenges and scope the right solution. No obligation, just an honest conversation.</p>
             </div>
         </div>
     </section>
@@ -759,7 +764,7 @@
                     <h3>DATASANJ</h3>
                     <p>Analytics consultancy helping business owners scale with automated reporting and reliable data systems. Microsoft Certified & Xero Advisor. Based in Canberra.</p>
                     <div class="footer-contact">
-                        <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
+                        <a href="/cdn-cgi/l/email-protection#71152e0b1e19101d311510051002101f1b5f121e1c"><span class="__cf_email__" data-cfemail="d9bd86a3b6b1b8b599bdb8adb8aab8b7b3f7bab6b4">[email&#160;protected]</span></a>
                         <a href="#">Canberra, ACT, Australia</a>
                     </div>
                 </div>
@@ -791,9 +796,3 @@
             </div>
 
             <div class="footer-bottom">
-                © 2025 DATASANJ | Analytics Consultancy by Zohal Zahir
-            </div>
-        </div>
-    </footer>
-</body>
-</html>
